--- a/src/public/html/register.html
+++ b/src/public/html/register.html
@@ -17,17 +17,17 @@
             <div class="mb-4">
                 <label for="name" class="block text-gray-300">Nome</label>
                 <input type="text" id="name"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2" required>
+                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <div class="mb-4">
                 <label for="email" class="block text-gray-300">Email</label>
                 <input type="email" id="email"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2" required>
+                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <div class="mb-4">
                 <label for="password" class="block text-gray-300">Senha</label>
                 <input type="password" id="password"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2" required>
+                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <button type="submit"
                 class="w-full bg-green-600 hover:bg-green-500 text-white p-2 rounded-md">Cadastrar</button>
