--- a/src/public/html/chat.html
+++ b/src/public/html/chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat da Sala</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-900 flex flex-col items-center justify-center min-h-screen">
@@ -28,6 +28,7 @@
     </div>
     <img src="./images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
         class="fixed bottom-10 right-10 h-12">
+        
     <!-- Carregamento dos scripts -->
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jwt-decode/3.1.2/jwt-decode.min.js" defer></script>
