--- a/src/public/html/login.html
+++ b/src/public/html/login.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeetCONNECT | Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-900 flex items-center justify-center min-h-screen">
-    <div class="bg-gray-800 p-8 rounded-lg shadow-md w-full max-w-sm m-4">
+<body class="bg-neutral-900 flex items-center justify-center min-h-screen">
+    <div class="bg-neutral-800 p-8 rounded-lg shadow-md w-full max-w-sm m-4">
         <h2 class="text-2xl font-bold mb-6 text-center text-white">MeetCONNECT | Login</h2>
         <form id="loginForm">
             <div class="mb-4">
-                <label for="email" class="block text-gray-300">Email</label>
+                <label for="email" class="block text-neutral-300">Email</label>
                 <input type="email" id="email"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
+                    class="mt-1 block w-full border border-neutral-600 bg-neutral-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <div class="mb-4">
-                <label for="password" class="block text-gray-300">Senha</label>
+                <label for="password" class="block text-neutral-300">Senha</label>
                 <input type="password" id="password"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
+                    class="mt-1 block w-full border border-neutral-600 bg-neutral-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <button type="submit"
-                class="w-full bg-green-600 hover:bg-green-500 text-white p-2 rounded-md">Entrar</button>
+                class="w-full bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Entrar</button>
         </form>
         
         <!-- Frase de registro -->
-        <p class="text-gray-300 mt-4 text-center">
+        <p class="text-neutral-300 mt-4 text-center">
             Ainda não tem uma conta? 
-            <a href="register.html" class="text-green-500 hover:underline">Clique aqui</a>
+            <a href="register.html" class="text-cyan-500 hover:underline">Clique aqui</a>
         </p>
 
         <p id="error-message" class="text-red-500 mt-2 hidden"></p>
@@ -48,7 +48,7 @@
 
     <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
         class="fixed bottom-10 right-10 h-12">
-
+    
     <script src="../js/login.js"></script>
 </body>
 
