--- a/src/public/html/register.html
+++ b/src/public/html/register.html
@@ -5,34 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link href="css/output.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style_loading_bar.css">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-900 flex items-center justify-center min-h-screen">
-    <div class="bg-gray-800 p-8 rounded-lg shadow-md w-full max-w-sm m-4">
+<body class="bg-neutral-900 flex items-center justify-center min-h-screen">
+    <div class="bg-neutral-800 p-8 rounded-lg shadow-md w-full max-w-sm m-4">
         <h2 class="text-2xl font-bold mb-6 text-center text-white">MeetCONNECT | Registro</h2>
         <form id="registerForm">
             <div class="mb-4">
-                <label for="name" class="block text-gray-300">Nome</label>
+                <label for="name" class="block text-neutral-300">Nome</label>
                 <input type="text" id="name"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
+                    class="mt-1 block w-full border border-neutral-600 bg-neutral-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <div class="mb-4">
-                <label for="email" class="block text-gray-300">Email</label>
+                <label for="email" class="block text-neutral-300">Email</label>
                 <input type="email" id="email"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
+                    class="mt-1 block w-full border border-neutral-600 bg-neutral-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <div class="mb-4">
-                <label for="password" class="block text-gray-300">Senha</label>
+                <label for="password" class="block text-neutral-300">Senha</label>
                 <input type="password" id="password"
-                    class="mt-1 block w-full border border-gray-600 bg-gray-700 text-white rounded-md p-2 focus:outline-none" required>
+                    class="mt-1 block w-full border border-neutral-600 bg-neutral-700 text-white rounded-md p-2 focus:outline-none" required>
             </div>
             <button type="submit"
-                class="w-full bg-green-600 hover:bg-green-500 text-white p-2 rounded-md">Cadastrar</button>
+                class="w-full bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Cadastrar</button>
             <button type="button" id="cancelButton"
-                class="w-full mt-2 bg-gray-600 hover:bg-gray-500 text-white p-2 rounded-md">Cancelar</button>
+                class="w-full mt-2 bg-neutral-600 hover:bg-neutral-500 text-white p-2 rounded-md">Cancelar</button>
         </form>
         <p id="error-message" class="text-red-500 mt-2 hidden"></p>
         <div id="loading" class="hidden flex flex-col items-center mt-4">
@@ -48,7 +47,7 @@
 
     <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
         class="fixed bottom-10 right-10 h-12">
-
+    
     <script src="../js/register.js"></script>
     <script>
         document.getElementById('cancelButton').addEventListener('click', () => {
