--- a/src/public/html/rooms.html
+++ b/src/public/html/rooms.html
@@ -40,30 +40,26 @@
                     <input type="number" id="roomCapacity" class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none" required>
                 </div>
                 <div class="flex justify-between">
-                    <button type="button" id="closeModal" class="bg-red-500 hover:bg-red-600 text-white hover:text-red-500 p-2 rounded">Cancelar</button>
-                    <button type="submit" class="bg-cyan-500 hover:bg-cyan-600 text-white p-2 rounded">Criar</button>
+                    <button type="button" id="closeModal" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
+                    <button type="submit" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Criar</button>
                 </div>
             </form>
         </div>
     </div>
 
+    <!-- Modal de Confirmação de Exclusão -->
+    <div id="confirmationModal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
+        <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
+            <h2 class="text-xl font-bold mb-4">Confirmação de Exclusão</h2>
+            <p id="modalMessage" class="mb-4">Você tem certeza que deseja excluir esta sala?</p>
+            <div class="flex justify-between">
+                <button onclick="closeConfirmationModal()" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
+                <button id="confirmDeleteButton" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Confirmar</button>
+            </div>
+        </div>
+    </div>
+
     <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
     class="fixed bottom-10 right-10 h-12">
-
-    <script>
-        document.getElementById('createRoomBtn').addEventListener('click', () => {
-            document.getElementById('createRoomModal').classList.remove('hidden');
-        });
-
-        document.getElementById('closeModal').addEventListener('click', () => {
-            document.getElementById('createRoomModal').classList.add('hidden');
-        });
-
-        document.getElementById('createRoomForm').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            await createRoom();
-        });
-    </script>
 </body>
-
 </html>
