--- a/src/public/html/rooms.html
+++ b/src/public/html/rooms.html
@@ -15,10 +15,12 @@
             <h1 class="text-xl font-bold">MeetCONNECT | Salas Disponíveis</h1>
         </div>
     </header>
-    
+
     <div class="container mx-auto my-6 flex justify-between"> <!-- Adiciona flex para alinhamento -->
-        <button id="createRoomBtn" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Criar Nova Sala</button>
-        <button id="logoutBtn" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Sair</button> <!-- Botão de Sair aqui -->
+        <button id="createRoomBtn" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Criar Nova
+            Sala</button>
+        <button id="logoutBtn" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Sair</button>
+        <!-- Botão de Sair aqui -->
     </div>
 
     <div id="roomContainer" class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
@@ -29,18 +31,24 @@
             <form id="createRoomForm">
                 <div class="mb-4">
                     <label for="roomName" class="block text-sm font-medium">Nome da Sala</label>
-                    <input type="text" id="roomName" class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none" required>
+                    <input type="text" id="roomName"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
+                        required>
                 </div>
                 <div class="mb-4">
                     <label for="roomDescription" class="block text-sm font-medium">Descrição</label>
-                    <textarea id="roomDescription" class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"></textarea>
+                    <textarea id="roomDescription"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"></textarea>
                 </div>
                 <div class="mb-4">
                     <label for="roomCapacity" class="block text-sm font-medium">Capacidade</label>
-                    <input type="number" id="roomCapacity" class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none" required>
+                    <input type="number" id="roomCapacity"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
+                        required>
                 </div>
                 <div class="flex justify-between">
-                    <button type="button" id="closeModal" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
+                    <button type="button" id="closeModal"
+                        class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
                     <button type="submit" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Criar</button>
                 </div>
             </form>
@@ -53,13 +61,30 @@
             <h2 class="text-xl font-bold mb-4">Confirmação de Exclusão</h2>
             <p id="modalMessage" class="mb-4">Você tem certeza que deseja excluir esta sala?</p>
             <div class="flex justify-between">
-                <button onclick="closeConfirmationModal()" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
-                <button id="confirmDeleteButton" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Confirmar</button>
+                <button onclick="closeConfirmationModal()"
+                    class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
+                <button id="confirmDeleteButton"
+                    class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Confirmar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Desconexão -->
+    <div id="logoutModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+        <div class="bg-neutral-800 p-6 rounded-md shadow-lg text-center">
+            <h2 class="text-xl font-bold text-white">Até Breve!</h2>
+            <p class="text-gray-300">Você será desconectado agora.<br>Faça login novamente para ver as salas.</p>
+            <div class="mt-4 flex justify-center space-x-4">
+                <button onclick="closeLogoutModal()"
+                    class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
+                <button id="confirmLogout"
+                    class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Confirmar</button>
             </div>
         </div>
     </div>
 
     <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
-    class="fixed bottom-10 right-10 h-12">
+        class="fixed bottom-10 right-10 h-12">
 </body>
+
 </html>
