--- a/src/public/html/register.html
+++ b/src/public/html/register.html
@@ -31,7 +31,7 @@
             <button type="submit"
                 class="w-full bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md">Cadastrar</button>
             <button type="button" id="cancelButton"
-                class="w-full mt-2 bg-neutral-600 hover:bg-neutral-500 text-white p-2 rounded-md">Cancelar</button>
+                class="w-full mt-2 bg-red-600 hover:bg-red-500 text-white p-2 rounded-md">Cancelar</button>
         </form>
         <p id="error-message" class="text-red-500 mt-2 hidden"></p>
         <div id="loading" class="hidden flex flex-col items-center mt-4">
