--- a/src/public/html/rooms.html
+++ b/src/public/html/rooms.html
@@ -15,15 +15,20 @@
             <h1 class="text-xl font-bold">MeetCONNECT | Salas Disponíveis</h1>
         </div>
     </header>
-     <!-- Botão de Sair aqui -->
-    <div class="container mx-auto my-6 flex justify-between"> <!-- Adiciona flex para alinhamento -->
-        <button id="createRoomBtn" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Criar Nova
-            Sala</button>
-        <button id="logoutBtn" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Sair</button>
-    </div>
-
+    <!-- Botões e Bem vindo -->
+    <div class="container mx-auto my-6 justify-end items-center flex space-x-4"> <!-- Justificar à direita e centralizar -->
+        <div class="text-white">
+            <p>Bem-vindo, <span class="text-cyan-600 font-bold" id="userName"></span>!</p>
+        </div>
+        <button id="createRoomBtn" class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">
+            Criar Nova Sala
+        </button>
+        <button id="logoutBtn" class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">
+            Sair
+        </button>
+    </div>    
     <div id="roomContainer" class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"></div>
-    
+
     <!-- Modal de Criação -->
     <div id="createRoomModal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
         <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
@@ -57,69 +62,68 @@
     </div>
 
     <!-- Modal de Edição de Sala -->
-        <div id="editRoomModal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
-            <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
-                <h2 class="text-xl font-bold mb-4">Editar Sala</h2>
-                <form id="editRoomForm">
-                    <div class="mb-4">
-                        <label for="editRoomName" class="block text-sm font-medium">Nome da Sala</label>
-                        <input id="editRoomName"
-                            class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
-                            type="text" required>
-                    </div>
-                    <div class="mb-4">
-                        <label for="editRoomDescription" class="block text-sm font-medium">Descrição</label>
-                        <textarea id="editRoomDescription"
-                            class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
-                            required></textarea>
-                    </div>
-                    <div class="mb-4">
-                        <label for="editRoomCapacity" class="block text-sm font-medium">Capacidade</label>
-                        <input id="editRoomCapacity"
-                            class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
-                            type="number" min="1" required>
-                    </div>
-                    <div class="flex justify-between">
-                        <button type="button" onclick="closeEditModal()"
-                            class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Cancelar</button>
-                        <button type="submit"
-                            class="bg-yellow-600 hover:bg-yellow-500 text-white p-2 rounded-md w-32">Salvar</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <!-- Modal de Confirmação de Exclusão -->
-        <div id="confirmationModal"
-            class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
-            <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
-                <h2 class="text-xl font-bold mb-4 text-center">Calma Jovem!</h2>
-                <p id="modalMessage" class="mb-4 text-center"></p>
+    <div id="editRoomModal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
+        <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
+            <h2 class="text-xl font-bold mb-4">Editar Sala</h2>
+            <form id="editRoomForm">
+                <div class="mb-4">
+                    <label for="editRoomName" class="block text-sm font-medium">Nome da Sala</label>
+                    <input id="editRoomName"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
+                        type="text" required>
+                </div>
+                <div class="mb-4">
+                    <label for="editRoomDescription" class="block text-sm font-medium">Descrição</label>
+                    <textarea id="editRoomDescription"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
+                        required></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="editRoomCapacity" class="block text-sm font-medium">Capacidade</label>
+                    <input id="editRoomCapacity"
+                        class="w-full p-2 bg-neutral-700 text-white border border-neutral-600 rounded focus:outline-none"
+                        type="number" min="1" required>
+                </div>
                 <div class="flex justify-between">
-                    <button onclick="closeConfirmationModal()"
+                    <button type="button" onclick="closeEditModal()"
                         class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Cancelar</button>
-                    <button id="confirmDeleteButton"
-                        class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Confirmar</button>
+                    <button type="submit"
+                        class="bg-yellow-600 hover:bg-yellow-500 text-white p-2 rounded-md w-32">Salvar</button>
                 </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Modal de Confirmação de Exclusão -->
+    <div id="confirmationModal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center">
+        <div class="bg-neutral-800 p-6 rounded shadow-lg w-full max-w-md text-white">
+            <h2 class="text-xl font-bold mb-4 text-center">Calma Jovem!</h2>
+            <p id="modalMessage" class="mb-4 text-center"></p>
+            <div class="flex justify-between">
+                <button onclick="closeConfirmationModal()"
+                    class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Cancelar</button>
+                <button id="confirmDeleteButton"
+                    class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Confirmar</button>
             </div>
         </div>
+    </div>
 
-        <!-- Modal de Desconexão -->
-        <div id="logoutModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
-            <div class="bg-neutral-800 p-6 rounded-md shadow-lg text-center">
-                <h2 class="text-xl font-bold text-white">Até Breve!</h2>
-                <p class="text-gray-300">Você será desconectado agora.<br>Faça login novamente para ver as salas.</p>
-                <div class="mt-4 flex justify-center space-x-4">
-                    <button onclick="closeLogoutModal()"
-                        class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Cancelar</button>
-                    <button id="confirmLogout"
-                        class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Confirmar</button>
-                </div>
+    <!-- Modal de Desconexão -->
+    <div id="logoutModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+        <div class="bg-neutral-800 p-6 rounded-md shadow-lg text-center">
+            <h2 class="text-xl font-bold text-white">Até Breve!</h2>
+            <p class="text-gray-300">Você será desconectado agora.<br>Faça login novamente para ver as salas.</p>
+            <div class="mt-4 flex justify-center space-x-4">
+                <button onclick="closeLogoutModal()"
+                    class="bg-red-600 hover:bg-red-500 text-white p-2 rounded-md w-32">Cancelar</button>
+                <button id="confirmLogout"
+                    class="bg-cyan-600 hover:bg-cyan-500 text-white p-2 rounded-md w-32">Confirmar</button>
             </div>
         </div>
+    </div>
 
-        <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
-            class="fixed bottom-10 right-10 h-12">
+    <img src="../images/Marca-Univassouras-Campus-Universitario-de-Marica.png" alt="logo da universidade"
+        class="fixed bottom-10 right-10 h-12">
 </body>
 
 </html>
